# He_NN_trading

./: .gitignore  BACKEND_FIXES_APPLIED.md  CHANGES_SUMMARY.md  CLEANUP_PLAN.md  CMakeLists.txt  Dockerfile  FIXES_COMPLETED.md  FIX_SUMMARY.md  GUI_IMPLEMENTATION_GUIDE.md  Hermite-BTC_v1.py  Hermite_NN_v3.py  QUICK_START.md  README.md  SETUP_INSTRUCTIONS.md  STATUS_251125_1700  TESTING_FIXES.md  algorithm  best_config_optuna_v5.yaml  best_config_optuna_v6_stage2.yaml  diag.py  grok  inference.py  main.py  optuna_optimize_v5.py  optuna_optimize_v6.py  optuna_optimize_v6_stage2.py  requirements-backend.txt  requirements_optuna.txt  setup_backend.sh  setup_gui.sh  start_backend.sh  start_gui.sh
Liquidity_maps.v3/: data_fetcher.py  data_plotter.py  data_processor.py  liqs_map.py  main.py
backend/: __init__.py  app.py
backend/api/: __init__.py  prediction_exporter.py
backend/data/: __init__.py  downloader.py
backend/hpo/: __init__.py  hpo_adapter.py
backend/workers/: __init__.py  training_worker.py
config/: app.yaml  ui_layout.json
cpp/examples/: bls.in
cpp/src/: main.cpp
cpp/tests/: TestMain.cpp
docs/: IMPLEMENTATION_PLAN.md  README_DESKTOP.md  optuna_ready.md  ws_schema.md
docs/fixes/: ERRORS_FOUND.md  IMPLEMENTATION_SUMMARY.md
docs/gui/: GUI_COMPLETE_IMPLEMENTATION.md  GUI_IMPLEMENTATION_COMPLETE.md  GUI_PROGRESS_UPDATE.md
docs/optuna/: LAST_BEST_PARAMETERS_OPT-V4  OPTUNA_GUIDE.md  OPTUNA_QUICK_START.md  OPTUNA_V6_ANALYSIS_PLATEAU.md  OPTUNA_V6_BRIEFING.md  SHARPE_VS_PVALUE_ANALYSIS.md  STAGE2_CRITICAL_WARNINGS.md  STAGE2_QUICK_START.md
reports/: results_20251106_152018.csv  results_20251106_152018.md  results_20251107_152430.csv  results_20251107_152430.md  results_20251107_153436.csv  results_20251107_153436.md  results_20251124_162138.csv  results_20251124_162958.md  results_20251125_132454.csv  results_20251125_132454.md  results_20251125_154924.csv  results_20251125_154924.md  summary.json
reports/calibrators/: isotonic_fold_1.pkl  isotonic_fold_3.pkl
reports/pit/: pit_fold_0_20251124_162953.csv  pit_fold_0_20251125_132448.csv  pit_fold_0_20251125_154919.csv  pit_fold_1_20251124_162954.csv  pit_fold_1_20251125_132449.csv  pit_fold_1_20251125_154920.csv  pit_fold_2_20251124_162954.csv  pit_fold_2_20251125_132450.csv  pit_fold_2_20251125_154921.csv  pit_fold_3_20251124_162135.csv  pit_fold_3_20251125_132451.csv  pit_fold_3_20251125_154922.csv  pit_fold_4_20251124_162137.csv  pit_fold_4_20251125_132453.csv  pit_fold_4_20251125_154924.csv
reports/predictions/: predictions_fold_0_20251107_152425.csv  predictions_fold_0_20251107_153431.csv  predictions_fold_0_20251124_162953.csv  predictions_fold_0_20251125_132448.csv  predictions_fold_0_20251125_154919.csv  predictions_fold_1_20251107_152426.csv  predictions_fold_1_20251107_153432.csv  predictions_fold_1_20251124_162954.csv  predictions_fold_1_20251125_132449.csv  predictions_fold_1_20251125_154920.csv  predictions_fold_2_20251107_152427.csv  predictions_fold_2_20251107_153433.csv  predictions_fold_2_20251124_162134.csv  predictions_fold_2_20251125_132450.csv  predictions_fold_2_20251125_154921.csv  predictions_fold_3_20251107_152428.csv  predictions_fold_3_20251107_153434.csv  predictions_fold_3_20251124_162956.csv  predictions_fold_3_20251125_132451.csv  predictions_fold_3_20251125_154922.csv  predictions_fold_4_20251107_152430.csv  predictions_fold_4_20251107_153436.csv  predictions_fold_4_20251124_162957.csv  predictions_fold_4_20251125_132453.csv  predictions_fold_4_20251125_154924.csv
scripts/: activate_env.sh  check_env.sh  check_setup.sh  debug_connection.sh
src/: __init__.py
src/config/: __init__.py  (+2 more)
tests/: conftest.py  test_confidence_gate.py  test_conformal.py  test_conformal_coverage.py  test_conformal_desktop.py  test_cv_splits.py  test_data_sync_desktop.py  test_dataset.py  test_diagnostics.py  test_isotonic_calibration.py  test_isotonic_calibration_desktop.py  test_labels.py  test_loss_balance.py  test_model_probabilistic.py  test_mz_numbers.py  test_pit.py  test_pit_z_desktop.py  test_repo_utils.py  test_results_reporting.py  test_sharpe_scale.py  test_strategy_pnl.py  test_strategy_thresholds.py  test_temporal_encoder.py  test_training.py  test_utils.py
ui/desktop/: CMakeLists.txt  README.md
ui/desktop/src/: chartwidget.cpp  chartwidget.h  controlwidget.cpp  controlwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  metricswidget.cpp  metricswidget.h  websocketclient.cpp  websocketclient.h
(+46 files in other folders)
